# HospitalityOS

./: -X  .env.development  .env.production  .env.production.template  .gitignore  AUDIT-REPORT.md  BUSINESS-LOGIC-GAP-ANALYSIS.md  Business_Logic_Gap_Analysis.xlsx  COMPREHENSIVE-UI-TEST-REPORT.md  CRYPTSK_WEBSITE_PROMPT.md  DEEP-SCAN-AUDIT-REPORT.md  DEEP-SCAN-REPORT.md  PRODUCT-DEEP-SCAN-REPORT.md  PRODUCTION-GAP-REPORT.md  PRODUCTION-RRD-SETUP.md  REPOSITORY_INFO.md  STAYSUITE_PMS_PRODUCT_AUDIT.md  StaySuite-Product-Features.docx  TRANSLATION_PLAN.md  WIFI-DEEP-SCAN-REPORT.md  WIFI-E2E-TEST-REPORT.md  WIFI_FEATURE_SUGGESTIONS.md  WIFI_IMPLEMENTATION_PLAN.md  WIFI_MODULE_DEEP_SCAN_REPORT.md  WIFI_MODULE_GAP_REPORT.md  WiFi-Module-Deep-Audit-Report.md  api-test.sh  ca.key  ca.srl  client.crt  client.csr  client.key  comprehensive-test.js  configure-mikrotik.py  create-wifi-views.ts  daemon-nextjs.sh  db-backup-20260503-224624.dump  deploy-nm-connections.sh  e2e-debug.js  e2e-debug2.js  (+65 more)
prisma/: seed.ts  (+15 more)
tools/e2guardian/configs/lists/example.group/: Makefile.am  bannedphraselist.in  bannedsitelist.in  bannedurllist.in  domainsnobypass.in  exceptionphraselist.in  oldbannedphraselist.in  oldexceptionphraselist.in  oldweightedphraselist.in  urlnobypass.in  weightedphraselist.in
tools/ulogd-build/ulogd-2.0.9/input/packet/: Makefile  Makefile.am  Makefile.in  ulogd_inppkt_NFLOG.c  ulogd_inppkt_NFLOG.la  ulogd_inppkt_NFLOG.lo  ulogd_inppkt_UNIXSOCK.c  ulogd_inppkt_UNIXSOCK.la  ulogd_inppkt_UNIXSOCK.lo
tools/ulogd-build/ulogd-2.0.9/input/packet/.deps/: ulogd_inppkt_NFLOG.Plo  (+1 more)
(+9857 files in other folders)
